path correction Safari Park

--- a/safaripark/css/style.css
+++ b/safaripark/css/style.css
@@ -197,7 +197,7 @@ body {
   width: 100%;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
-  background-image: url("./img/menuMobile.jpg");
+  background-image: url("../img/menuMobile.jpg");
   background-size: cover;
   background-position: center;
   z-index: 3;
@@ -248,6 +248,9 @@ body {
 }
 
 @media screen and (min-width: 992px) {
+  .nav {
+    background-image: url("../img/menuDesktop.jpg");
+  }
   .nav__item {
     font-size: 5rem;
   }
@@ -497,7 +500,7 @@ body {
           justify-content: center;
   text-align: center;
   height: 400px;
-  background-image: url("/img/flamingosMobile.jpg");
+  background-image: url("../img/flamingosMobile.jpg");
   background-attachment: fixed;
   background-size: cover;
 }
@@ -551,7 +554,7 @@ body {
 @media screen and (min-width: 992px) {
   .heroImg {
     height: 600px;
-    background-image: url("/img/flamingosDesktop.jpg");
+    background-image: url("../img/flamingosDesktop.jpg");
   }
   .heroImg__title {
     font-size: 4rem;
@@ -630,17 +633,17 @@ body {
 }
 
 .nature__card-img--first {
-  background-image: url("/img/lion.jpg");
+  background-image: url("../img/lion.jpg");
   background-position-x: 30%;
 }
 
 .nature__card-img--second {
-  background-image: url("/img/springbok.jpg");
+  background-image: url("../img/springbok.jpg");
   background-position-x: 40%;
 }
 
 .nature__card-img--third {
-  background-image: url("/img/anaconda.jpg");
+  background-image: url("../img/anaconda.jpg");
   background-position-x: 50%;
 }
 
@@ -759,7 +762,7 @@ body {
 
 .tickets {
   position: relative;
-  background-image: url("/img/ticketsMobile.jpg");
+  background-image: url("../img/ticketsMobile.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -857,7 +860,7 @@ body {
 
 @media screen and (min-width: 992px) {
   .tickets {
-    background-image: url("/img/ticketsDesktop.jpg");
+    background-image: url("../img/ticketsDesktop.jpg");
   }
   .tickets__option {
     display: -webkit-box;
